# Team8_HW

./: .gitignore  README.md  db.sqlite3  pyproject.toml
accounts/: forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
config/: settings.py  urls.py
main/: admin.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_recipe_cuisine_recipe_meal_type.py
static/css/: styles.css
templates/: base.html
templates/accounts/: register.html  user_confirm_delete.html  user_detail.html  user_edit.html
templates/main/: dashboard.html  home.html  recipe_detail.html  user_profile.html
templates/registration/: login.html  logout.html
